Change api sample env

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,11 +1,11 @@
 ENV_MODE=
 
 #Mysql
-DB_PORT=3306
-DB_HOST=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+MYSQL_PORT=3306
+MYSQL_HOST=
+MYSQL_USERNAME=
+MYSQL_PASSWORD=
+MYSQL_NAME=
 
 #server
 PORT=
