--- a/react-app/client/package.json
+++ b/react-app/client/package.json
@@ -10,18 +10,20 @@
     "dotenv": "^8.2.0",
     "i18next": "^19.4.1",
     "moment": "^2.24.0",
+    "puppeteer": "^2.1.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.4",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -41,6 +43,8 @@
   },
   "devDependencies": {
     "i18next-browser-languagedetector": "^4.0.2",
+    "jest": "^25.3.0",
+    "jest-fetch-mock": "^3.0.3",
     "react-localization": "^1.0.15"
   }
 }
